--- a/src/index.css
+++ b/src/index.css
@@ -4,14 +4,42 @@
 }
 
 .store {
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.store-info {
   display: flex;
   align-items: center;
   margin-bottom: 20px;
 }
 
-.store img {
+.store-info img {
   width: 100px;
   height: 100px;
   border-radius: 50%;
   margin-right: 20px;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+th,
+td {
+  padding: 10px;
+  border: 1px solid #ddd;
+}
+
+th {
+  background-color: #f2f2f2;
+  text-align: left;
+}
+
+td {
+  text-align: center;
 }
