--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,51 @@
 .App {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.store-box {
+  border: 1px solid #ddd;
+  padding: 20px;
+  margin-bottom: 20px;
+  text-align: center;
+  width: 900px; /* Add a fixed width */
+  height: auto; /* Remove fixed height */
 }
 
 .store {
-  margin-bottom: 20px;
-  padding: 20px;
-  border: 1px solid #ddd;
-  border-radius: 4px;
+  text-align: center;
 }
 
 .store-info {
-  display: flex;
-  align-items: center;
   margin-bottom: 20px;
 }
 
 .store-info img {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
   border-radius: 50%;
-  margin-right: 20px;
+  margin-bottom: 10px;
+}
+
+.rating {
+  color: #ffcc00;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.rating-star {
+  display: inline-block;
+  margin-right: 2px;
+  cursor: pointer;
+}
+
+.rating-star.filled {
+  color: gold;
 }
 
 table {
@@ -33,13 +58,33 @@ th,
 td {
   padding: 10px;
   border: 1px solid #ddd;
+  text-align: left;
 }
 
 th {
   background-color: #f2f2f2;
+}
+
+td.left-align {
   text-align: left;
 }
 
-td {
-  text-align: center;
+.store-footer {
+  margin-top: 10px;
+  text-align: left;
+}
+
+.establishment-date {
+  font-size: 14px;
+  margin-bottom: 5px;
+}
+
+.website a {
+  text-decoration: none;
+  color: #000;
+  font-size: 14px;
+}
+
+.website a:hover {
+  text-decoration: underline;
 }
