--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,30 @@
 .App {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   gap: 20px;
-  margin-top: 20px;
 }
 
 .store-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
   border: 1px solid #ddd;
   padding: 20px;
   margin-bottom: 20px;
-  text-align: center;
-  width: 900px; /* Add a fixed width */
-  height: auto; /* Remove fixed height */
+  width: 900px;
+}
+
+.column {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .store {
+  display: flex;
+  flex-direction: column;
   text-align: center;
 }
 
@@ -24,12 +32,21 @@
   margin-bottom: 20px;
 }
 
-.store-info img {
+.image-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container img {
   width: 150px;
   height: 150px;
   object-fit: cover;
   border-radius: 50%;
-  margin-bottom: 10px;
+}
+
+.store-details {
+  margin-top: 10px;
 }
 
 .rating {
@@ -74,17 +91,23 @@ td.left-align {
   text-align: left;
 }
 
-.establishment-date {
+.established-website {
   font-size: 14px;
   margin-bottom: 5px;
 }
 
-.website a {
-  text-decoration: none;
-  color: #000;
-  font-size: 14px;
+.country-code-container {
+  display: flex;
+  align-items: center;
 }
 
-.website a:hover {
-  text-decoration: underline;
+.country-code-container img {
+  width: 20px;
+  height: 20px;
+  margin-right: 5px;
+}
+
+.country-code {
+  font-size: 14px;
+  margin-bottom: 0;
 }
