--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10px; /* Adjust the margin as per your preference */
+  position: relative;
 }
 
 .image-container img {
@@ -43,7 +45,14 @@
   height: 150px;
   object-fit: cover;
   border-radius: 50%;
+  transition: transform 0.3s, box-shadow 0.3s; /* Added 'transform' transition */
 }
+
+.image-container:hover img {
+  transform: scale(1.05); /* Added scale transform on hover */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Added box-shadow */
+}
+
 
 .store-details {
   margin-top: 10px;
@@ -51,7 +60,7 @@
 
 .rating {
   color: #ffcc00;
-  font-size: 10px;
+  font-size: 20px;
   margin-bottom: 10px;
 }
 
@@ -110,4 +119,27 @@ td.left-align {
 .country-code {
   font-size: 14px;
   margin-bottom: 0;
+}
+
+.website-button {
+  background-color: #4caf50;
+  border: none;
+  color: white;
+  padding: 8px 16px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 14px;
+  cursor: pointer;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+}
+
+.website-button:hover {
+  background-color: #45a049;
+}
+
+.website-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.4);
 }
